--- a/style.css
+++ b/style.css
@@ -1,15 +1,13 @@
 html {
   box-sizing: border-box;
   background: #438fc6;
-  font-family: "Comfortaa", cursive;
+  font-family: 'Comfortaa', cursive;
   font-size: 20px;
   font-weight: 200;
   color: #000000;
 }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
   box-sizing: inherit;
 }
 
@@ -29,7 +27,7 @@ input.search {
   margin: 0;
   text-align: center;
   outline: 0;
-  border: 10px solid #f7f7f7;
+  border: 10px solid #F7F7F7;
   width: 120%;
   left: -10%;
   position: relative;
@@ -50,7 +48,7 @@ input.search {
 .suggestions li {
   background: white;
   list-style: none;
-  border-bottom: 1px solid #d8d8d8;
+  border-bottom: 1px solid #D8D8D8;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
   margin: 0;
   padding: 20px;
@@ -62,12 +60,12 @@ input.search {
 
 .suggestions li:nth-child(even) {
   transform: perspective(100px) rotateX(3deg) translateY(2px) scale(1.001);
-  background: linear-gradient(to bottom, #ffffff 0%, #efefef 100%);
+  background: linear-gradient(to bottom,  #ffffff 0%,#EFEFEF 100%);
 }
 
 .suggestions li:nth-child(odd) {
   transform: perspective(100px) rotateX(-3deg) translateY(3px);
-  background: linear-gradient(to top, #ffffff 0%, #efefef 100%);
+  background: linear-gradient(to top,  #ffffff 0%,#EFEFEF 100%);
 }
 
 span.population {
@@ -81,7 +79,7 @@ span.population {
 .logo-name {
   align-items: center;
   text-align: center;
-  font-family: "Comfortaa", cursive;
+  font-family: 'Comfortaa', cursive;
   color: #000000ba;
   font-size: 80pt;
 }
@@ -96,7 +94,7 @@ span.population {
 
 #linkedin-logo {
   width: 60px;
-}
+};
 
 #github-linkedin {
   display: flex;
